--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="{% static 'css/style.css' %}">
-  {% block meta %}
-  {% endblock meta %}
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    {% block meta %}
+    {% endblock meta %}
+  </head>
 
-<body>
-  {% block content %}
-  {% endblock content %}
-</body>
+  <body>
+    {% block content %}
+    {% endblock content %}
+  </body>
 
 </html>
+
+<style>
+  body
+  {
+      background-image: url('/static/images/sayaanimek.png');
+      background-size: 50%;
+  }
+</style>
