--- a/todolist/templates/register.html
+++ b/todolist/templates/register.html
@@ -2,34 +2,50 @@
 <title>Registrasi Akun</title>
 {% endblock meta %} {% block content %}  
 
-<div class = "login">
-    <h1>Formulir Registrasi</h1>  
+    <ul class = "nav navbar-expand" style = "background-color: purple; color: white; box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);">
+        <li class = "nav-item mt-1 mb-1" style = "margin: 20px;">
+            <h1>Registration Form</h1>
+        </li>
+    </ul>
 
-        <form method="POST" >  
+    <div class = "login containers-fluid text-center mt-5">  
+        <form class = "mt-3" method = "POST">  
             {% csrf_token %}  
-            <table>  
-                {{ form.as_table }}  
-                <tr>  
-                    <td></td>
-                    <td><input 
-                        class="btn btn-primary"
-			style="width: 200px"
-                        type="submit" 
-                        name="submit" 
-                        value="Daftar"
-                    /></td>  
-                </tr>  
-            </table>  
+            <div class = "jumbotron rounded-4" style = "background-color: lavender; max-width: 770px; padding: 10px; box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);">
+                <table class = "table table-striped-columns table-hover border-dark">  
+                    <tbody>    
+                        {{ form.as_table }}  
+                        <tr>  
+                            <td></td>
+                            <td><input 
+                                class="btn btn-primary"
+                                style="width: 200px"
+                                type="submit" 
+                                name="submit" 
+                                value="Daftar"
+                            /></td>  
+                        </tr> 
+                    </tbody> 
+                </table>  
+            </div>
         </form>
 
-    {% if messages %}  
-        <ul>   
-            {% for message in messages %}  
-                <li>{{ message }}</li>  
-                {% endfor %}  
-        </ul>   
-    {% endif %}
+        {% if messages %}  
+            <table class = "jumbotron table table-borderless rounded-4" style = "background-color: lavender; max-width: 770px; box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);">
+                <tr>
+                    <td>
+                        <ul style = "text-align: left;">
+                            {% for message in messages %}  
+                                <li>{{message}}</li>  
+                            {% endfor %}  
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        {% endif %}
 
-</div>  
+        <br>
+
+    </div>  
 
 {% endblock content %}
